# EverMod-cli

./: .gitignore  README.md  build.py  evermod.spec  manifest.json  pyproject.toml  requirements.txt  setup.iss
docs/: EverMod_Release_System.md  EverMod_Release_System_es.md  Technical_Documentation.md  Technical_Documentation_es.md  User_Guide.md  User_Guide_es.md
features/: ever_mod_cli_lint_control_report.md
src/evermod/: main.py
src/evermod/auth/: security.py
src/evermod/auth/keys/: evermod_public.pem
src/evermod/commands/: add.py  create.py  evermix.py  release.py  update.py  version.py
src/evermod/commands/create_helper/: evermod_downloader.py  io_utils.py  structure_builder.py  template_utils.py
src/evermod/utils/: gradle_tools.py  paths.py  publisher.py
